@@ -21,8 +21,7 @@
 					"type": "item",
 					"code": "expandedfoods:dressing-{type}"
 				}
-			},
-			"nutritionPropsPerLitre": { "saturation": 0, "foodcategory": "NoNutrition" }
+			}
 		},
 		"expandedNutritionProps": {
       		"game:vinegarportion" : { "saturation": 4, "foodcategory": "Fruit" },
@@ -38,7 +37,6 @@
 	"creativeinventoryStacks": [ { "tabs": ["general", "liquids", "expandedfoods"], "stacks": [ { "type": "block", "code": "game:woodbucket", "attributes": { "ucontents": [ { "type":"item", "code": "expandedfoods:dressing-{type}", "makefull": true } ] } } ] } ],
 	"maxstacksize": 5000,
 	"materialDensity": 200,
-	"nutritionProps": { "saturation": 0, "foodcategory": "NoNutrition" },
 	"transitionablePropsByType": {
 		"*":[{
     			"type": "Perish",
