@@ -110,6 +110,9 @@
   "itemdesc-meatnugget-*-tenderpartbaked": "Could use a little more cooking...",
   "itemdesc-meatnugget-*-tender": "Juicy and delicious!",
   "itemdesc-meatnugget-*-tendercharred": "Tough, but durable.",
+  "item-handbooktitle-meatnugget": "Preparing Meat",
+  "item-handbooktext-meatnugget": "Meat can be tenderized via direct blunt force. Doing so makes it tastier and easier to digest. Chopped meat nuggets can be used in more foods and meals than tenderized meat.",
+
 
   "item-fishnugget-smashed": "Smashed fish fillet",
   "item-fishnugget-raw": "Raw fish nuggets",
@@ -7709,6 +7712,10 @@
     "game:meal-ingredient-stew-secondary-limeegg-capercaillie": "water-glassed capercaillie eggs",
     "game:meal-ingredient-soup-primary-limeegg-capercaillie": "water-glassed capercaillie eggs",
     "game:meal-ingredient-soup-secondary-limeegg-capercaillie": "water-glassed capercaillie eggs",
+  
+    "item-handbooktitle-limeegg": "Water-Glassed Egg",
+    "item-handbooktext-limeegg": "Water-glassing preserves fresh eggs by submerging them in lime, which seals the eggshell and maintains its texture. Eggs can be water-glassed nearly indefinitely, but the lime must be regularly refreshed.",
+
 
     "block-hardlard": "Hardened lard",
     "incontainer-block-hardlard": "hardened lard",
