@@ -100,6 +100,8 @@ REBALANCING:
 - Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven - DONE!!!
 - Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
 - Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
+- Carrot can be added to fruit bread/muffins, similar to pumpkin
+- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
@@ -107,6 +109,7 @@ BUG FIXES:
 - SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
 - WHY ARE FRIED BALLS DOING IT TOO????
 - Peanut butter fixed so it gives nutrients when in bowl/bucket
+- NutritionProps removed from salad dressing - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
@@ -125,6 +128,7 @@ MISC:
 - Soulstorm Brew makes you psychedelic now?
 - Items can go into crocks? New labels for everything?
 - Fermented fish slop pile voxelized to resemble pickled soybean pile - DONE!!!
+- Pickled cabbage transform reviewed
 
 
 2.0.0-dev.5
